--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div id='map' ></div>
+    <button style="position: fixed; left: 10px; top: 10px;" onclick="offEvent()">Clear</button>>
 
 </body>
 <script src="index.js"></script>
