--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -53,7 +53,7 @@
       <div class="right-panel">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Kết quả</h5>
+            <h5 class="card-title">Kết quả<i class="fas fa-times" style="float: right;" onclick="closeRightPanel()"></i></h5>
            
            
           </div>
