--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -50,7 +50,7 @@
     </div>
       <div id="map"></div>
 
-      <div class="right-panel">
+      <!-- <div class="right-panel">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Kết quả<i class="fas fa-times" style="float: right;" onclick="closeRightPanel()"></i></h5>
@@ -58,7 +58,7 @@
            
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- <button style="position: fixed; left: 10px; top: 10px;" onclick="offEvent()">Clear</button> -->
     </div>
 
