--- a/test/index.html
+++ b/test/index.html
@@ -1,54 +1,81 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="p-3 m-0 border-0 bd-example">
-
-    <!-- Example Code -->
-    
-    <div  class="card">
-        <div class="card-body">
-         Chức năng <i onclick="closeTabLeft()" style="float:right ;" class="fas fa-arrow-left"></i>
-        </div>
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Accordion Item #1
-              </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Accordion Item #2
-              </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Accordion Item #3
-              </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    <!-- End Example Code -->
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Tìm đường đi giữa hai điểm</title>
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v1.13.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.13.0/mapbox-gl.css" rel="stylesheet" />
+<script src="https://files.ekgis.vn/sdks/v1.0.0/ekmap-platform.min.js"></script>
+<link href="https://files.ekgis.vn/sdks/v1.0.0/ekmap-platform.min.css" rel="stylesheet" />
+<style>
+	body { margin: 0; padding: 0; }
+	#map { position: absolute; top: 0; bottom: 0; width: 100%; background:#ddd;}
+</style>
+</head>
+<body>
+<div id="map">
+<div
+style="
+position: absolute;
+z-index: 1;
+left: 10px;
+top: 10px;
+background-color: white;
+padding: 5px 10px;
+font-size: 1rem;
+"
+>
+Click trên bản đồ để xác định điểm tìm đường
+</div>
+</div>
+ 
+<script>
+var map = new mapboxgl.Map({
+container: 'map',
+center: [105.78701815783748, 21.030483198840585],
+zoom: 15
+});
+ 
+/* Bản đồ nền */
+var basemap = new ekmapplf.VectorBaseMap('OSM:Bright', 'w1Dlh2wRon7mE6sL196TgvLS45fw02uon74pJ0rc');
+basemap.addTo(map);
+ 
+//===Chỉ đường
+ 
+//khởi tạo
+map.on('load', () => {
+map.addSource('route', {
+'type': 'geojson',
+'data': {
+'type': 'Feature',
+'properties': {},
+'geometry': {
+'type': 'LineString',
+'coordinates': [
+[105.78798775955993, 21.03034676390913],
+[105.78696315571739, 21.03048696255273],
+[105.78624968811667, 21.03060212562498]
+]
+}
+}
+});
+map.addLayer({
+'id': 'route',
+'type': 'line',
+'source': 'route',
+'layout': {
+'line-join': 'round',
+'line-cap': 'round'
+},
+'paint': {
+'line-color': '#ff9900',
+'line-width': 8
+}
+});
+});
+</script>
+ 
+ 
+</body>
 </html>
