--- a/test/index.html
+++ b/test/index.html
@@ -15,67 +15,104 @@
 </head>
 <body>
 <div id="map">
-<div
-style="
-position: absolute;
-z-index: 1;
-left: 10px;
-top: 10px;
-background-color: white;
-padding: 5px 10px;
-font-size: 1rem;
-"
->
-Click trên bản đồ để xác định điểm tìm đường
+    <div style="
+            position: absolute;
+            z-index: 1;
+            left: 10px;
+            top: 10px;
+            background-color: white;
+            padding: 5px 10px;
+            font-size: 1rem;
+        ">
+        Click trên bản đồ để xác định điểm tìm đường
+    </div>
 </div>
-</div>
- 
+
 <script>
-var map = new mapboxgl.Map({
-container: 'map',
-center: [105.78701815783748, 21.030483198840585],
-zoom: 15
-});
- 
-/* Bản đồ nền */
-var basemap = new ekmapplf.VectorBaseMap('OSM:Bright', 'w1Dlh2wRon7mE6sL196TgvLS45fw02uon74pJ0rc');
-basemap.addTo(map);
- 
-//===Chỉ đường
- 
-//khởi tạo
-map.on('load', () => {
-map.addSource('route', {
-'type': 'geojson',
-'data': {
-'type': 'Feature',
-'properties': {},
-'geometry': {
-'type': 'LineString',
-'coordinates': [
-[105.78798775955993, 21.03034676390913],
-[105.78696315571739, 21.03048696255273],
-[105.78624968811667, 21.03060212562498]
-]
-}
-}
-});
-map.addLayer({
-'id': 'route',
-'type': 'line',
-'source': 'route',
-'layout': {
-'line-join': 'round',
-'line-cap': 'round'
-},
-'paint': {
-'line-color': '#ff9900',
-'line-width': 8
-}
-});
-});
+    var map = new mapboxgl.Map({
+        container: 'map',
+        center: [105, 17],
+        zoom: 4
+    });
+
+    /* Bản đồ nền */
+    var basemap = new ekmapplf.VectorBaseMap('OSM:Bright', 'w1Dlh2wRon7mE6sL196TgvLS45fw02uon74pJ0rc');
+    basemap.addTo(map);
+
+    //===Chỉ đường
+
+    //khởi tạo
+    var routingService = new ekmapplf.service.Routing({
+        apiKey: 'w1Dlh2wRon7mE6sL196TgvLS45fw02uon74pJ0rc',
+        profile: 'foot'
+    });
+
+    //ví dụ click trên bản đồ để xác định 2 điểm
+    var startPoint, endPoint, markerStart, markerEnd;
+    map.on('click', function (evt) {
+        if (!startPoint) startPoint = evt.lngLat;
+
+        if (!endPoint) endPoint = evt.lngLat;
+        else {
+            startPoint = endPoint;
+            endPoint = evt.lngLat;
+        }
+        if (!markerStart)
+            markerStart = new mapboxgl.Marker()
+                .setLngLat(startPoint.toArray())
+                .addTo(map);
+        else markerStart.setLngLat(startPoint.toArray());
+
+        routing();
+    });
+
+    //gọi dịch vụ tìm đường
+    function routing() {
+        if (startPoint && endPoint && startPoint != endPoint) {
+            if (!markerEnd)
+                markerEnd = new mapboxgl.Marker({ color: 'red' })
+                    .setLngLat(endPoint.toArray())
+                    .addTo(map);
+            else markerEnd.setLngLat(endPoint.toArray());
+
+            var coordinates = startPoint.toArray().toString() + ";" + endPoint.toArray().toString();
+            routingService.setCoordinates(coordinates); // thiết lập cặp điểm đầu và cuối
+
+            //xác định được đường đi
+            var paramRoute = {
+                overview: "full",
+                alternatives: false,
+                steps: false,
+                geometries: "geojson",
+            }
+            routingService.getRoute(paramRoute, function(error, data){
+                var featureData = {
+                    'type': 'Feature',
+                    'properties': {},
+                    'geometry': data.routes[0].geometry
+                };
+                if (map.getSource('route')) {
+                    map.getSource('route').setData(featureData);
+                } else {
+                    map.addSource('route', {
+                        'type': 'geojson',
+                        'data': featureData
+                    });
+                    map.addLayer({
+                        'id': 'route',
+                        'type': 'line',
+                        'source': 'route',
+                        'paint': {
+                            'line-color': '#4882c5',
+                            'line-width': 7
+                        }
+                    });
+                }
+            })
+        }
+    }
 </script>
- 
- 
+
+
 </body>
 </html>
