--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -138,7 +138,7 @@ height: calc(100vh - 15px);
 </div>
 </div>
 <div class="wrraper">
-  <p style="display: flex ; justify-content:center ; align-items:center ; margin-top: 4rem;color: #14B5A0;" id="close"><i   style="color: #14B5A0;margin-right: 20px;" class="fa-solid fa-computer-mouse"></i> Click trên bản đồ để chọn vị trí</p>
+  <p style="display: flex ; justify-content:center ; align-items:center ; margin-top: 4rem;color: #14B5A0;" id="close"><i   style="color: #14B5A0;margin-right: 20px;" onclick="closeTabLeft()" class="fa-solid fa-computer-mouse"></i> Click trên bản đồ để chọn vị trí<i onclick="closeTabLeft()" style="float:right ;margin-left: 20px;" class="fas fa-arrow-left"></i></p>
   <div style="height: 100%;" class="card">
     <div class="card-body">
       
