--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -180,7 +180,15 @@ height: calc(100vh - 15px);
 </div>
 <div onclick="openTabLeft()" class="btn-open-leftpanel" >
 
-  <i  class="fas fa-arrow-right"></i>
+  <i class="fa-solid fa-circle-info"></i>
+</div> 
+<div onclick="showLonglat()" class="btn-open-leftpanel-infor" >
+
+  <i class="fa-solid fa-location-dot"></i>
+</div> 
+<div onclick="RoadMap()" class="btn-open-leftpanel-infor2" >
+
+  <i class="fa-solid fa-paper-plane" ></i>
 </div> 
    
 
