--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -189,17 +189,17 @@ height: calc(100vh - 15px);
   <i  class="fa-solid fa-map-location"></i>
 </div>                           
                           
-<div onclick="showLonglat()" class="btn-open-leftpanel-infor" >
+<div id="100" name="function" onclick="showLonglat(this.id)" class="btn-open-leftpanel-infor" >
 
   <i class="fa-solid fa-location-dot"></i>
 </div> 
-<div onclick="RoadMap()" class="btn-open-leftpanel-infor2" >
+<div onclick="showLonglat(this.id)" id="101" name="function"  class="btn-open-leftpanel-infor2" >
 
   <i class="fa-solid fa-paper-plane" ></i>
 </div>   
-<div onclick="Measure()" class="btn-open-leftpanel-infor3" >
+<div onclick="Measure()"  id="102" name="function" class="btn-open-leftpanel-infor3" >
 
-  <i  class="fa-solid fa-ruler-combined"></i>
+  <i   class="fa-solid fa-ruler-combined"></i>
 </div>          
         
 
