--- a/MapBox/index.html
+++ b/MapBox/index.html
@@ -193,11 +193,11 @@ height: calc(100vh - 15px);
 
   <i class="fa-solid fa-location-dot"></i>
 </div> 
-<div onclick="showLonglat(this.id)" id="101" name="function"  class="btn-open-leftpanel-infor2" >
+<div onclick="RoadMap()" id="101" name="function"  class="btn-open-leftpanel-infor2" >
 
   <i class="fa-solid fa-paper-plane" ></i>
 </div>   
-<div onclick="Measure()"  id="102" name="function" class="btn-open-leftpanel-infor3" >
+<div onclick="showLonglat(this.id )"  id="102" name="function" class="btn-open-leftpanel-infor3" >
 
   <i   class="fa-solid fa-ruler-combined"></i>
 </div>          
